Total Price + GST + Final Price Calculator added to my Cart

--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
                         </tr>
                         
                     </table>
-                    <table class="gst">
+                    <table class="calculator">
                     	<tr class="total-price">
                     		<td>Total Price</td>
                     		<td id="total-price"></td>
                     	</tr>
-                    	<tr>
-                    		<th>GST</th>
-                    		<th style="text-align: center;">18%</th>
+                    	<tr class="gst">
+                    		<td>GST</th>
+                    		<td style="text-align: center;">18%</th>
                     	</tr>
                     	<tr class="final-price">
-                    		<td>Final Price</td>
-                    		<td id="final-price"></td>
+                    		<th>Final Price</td>
+                    		<th id="final-price"></td>
                     	</tr>
                     </table>
                 </a>
